--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,77 +1,81 @@
-alabaster==0.7.13 ; python_version >= "3.7" and python_version < "4.0"
-asn1crypto==1.5.1 ; python_version >= "3.7" and python_version < "4.0"
-attrs==23.1.0 ; python_version >= "3.7" and python_version < "4.0"
-babel==2.12.1 ; python_version >= "3.7" and python_version < "4.0"
-black==23.3.0 ; python_version >= "3.7" and python_version < "4.0"
-blockfrost-python==0.5.3 ; python_version >= "3.7" and python_version < "4"
-cbor2==5.4.6 ; python_version >= "3.7" and python_version < "4.0"
-certifi==2022.12.7 ; python_version >= "3.7" and python_version < "4"
-certvalidator==0.11.1 ; python_version >= "3.7" and python_version < "4.0"
-cffi==1.15.1 ; python_version >= "3.7" and python_version < "4.0"
-charset-normalizer==3.1.0 ; python_version >= "3.7" and python_version < "4"
-click==8.1.3 ; python_version >= "3.7" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.7" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.7" and python_version < "4.0" and platform_system == "Windows"
-cose==0.9.dev8 ; python_version >= "3.7" and python_version < "4.0"
-coverage[toml]==7.2.3 ; python_version >= "3.7" and python_version < "4.0"
-cryptography==40.0.2 ; python_version >= "3.7" and python_version < "4.0"
-decorator==5.1.1 ; python_version >= "3.7" and python_version < "4.0"
-docutils==0.17.1 ; python_version >= "3.7" and python_version < "4.0"
-ecdsa==0.18.0 ; python_version >= "3.7" and python_version < "4.0"
-ecpy==1.2.5 ; python_version >= "3.7" and python_version < "4.0"
-exceptiongroup==1.1.1 ; python_version >= "3.7" and python_version < "3.11"
-execnet==1.9.0 ; python_version >= "3.7" and python_version < "4.0"
-flake8==5.0.4 ; python_version >= "3.7" and python_version < "4.0"
-flask==2.2.4 ; python_version >= "3.7" and python_version < "4.0"
-frozendict==2.3.8 ; python_version >= "3.7" and python_version < "4.0"
-frozenlist==1.3.3 ; python_version >= "3.7" and python_version < "4.0"
-idna==3.4 ; python_version >= "3.7" and python_version < "4"
-imagesize==1.4.1 ; python_version >= "3.7" and python_version < "4.0"
-importlib-metadata==4.2.0 ; python_version >= "3.7" and python_version < "3.10"
-iniconfig==2.0.0 ; python_version >= "3.7" and python_version < "4.0"
-isort==5.11.5 ; python_version >= "3.7" and python_version < "4.0"
-itsdangerous==2.1.2 ; python_version >= "3.7" and python_version < "4.0"
-jinja2==3.1.2 ; python_version >= "3.7" and python_version < "4.0"
-markupsafe==2.1.2 ; python_version >= "3.7" and python_version < "4.0"
-mccabe==0.7.0 ; python_version >= "3.7" and python_version < "4.0"
-mnemonic==0.20 ; python_version >= "3.7" and python_version < "4.0"
-mypy-extensions==1.0.0 ; python_version >= "3.7" and python_version < "4.0"
-mypy==1.2.0 ; python_version >= "3.7" and python_version < "4.0"
-oscrypto==1.3.0 ; python_version >= "3.7" and python_version < "4.0"
-packaging==23.1 ; python_version >= "3.7" and python_version < "4.0"
-pathspec==0.11.1 ; python_version >= "3.7" and python_version < "4.0"
-platformdirs==3.3.0 ; python_version >= "3.7" and python_version < "4.0"
-pluggy==1.0.0 ; python_version >= "3.7" and python_version < "4.0"
-pprintpp==0.4.0 ; python_version >= "3.7" and python_version < "4.0"
-py==1.11.0 ; python_version >= "3.7" and python_version < "4.0"
-pycodestyle==2.9.1 ; python_version >= "3.7" and python_version < "4.0"
-pycparser==2.21 ; python_version >= "3.7" and python_version < "4.0"
-pyflakes==2.5.0 ; python_version >= "3.7" and python_version < "4.0"
-pygments==2.15.1 ; python_version >= "3.7" and python_version < "4.0"
-pynacl==1.5.0 ; python_version >= "3.7" and python_version < "4.0"
-pytest-cov==4.0.0 ; python_version >= "3.7" and python_version < "4.0"
-pytest-xdist==3.2.1 ; python_version >= "3.7" and python_version < "4.0"
-pytest==7.3.1 ; python_version >= "3.7" and python_version < "4.0"
-pytz==2023.3 ; python_version >= "3.7" and python_version < "3.9"
-requests==2.28.2 ; python_version >= "3.7" and python_version < "4"
-retry==0.9.2 ; python_version >= "3.7" and python_version < "4.0"
-setuptools==67.7.2 ; python_version >= "3.7" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.7" and python_version < "4.0"
-snowballstemmer==2.2.0 ; python_version >= "3.7" and python_version < "4.0"
-sphinx-copybutton==0.5.2 ; python_version >= "3.7" and python_version < "4.0"
-sphinx-rtd-theme==1.2.0 ; python_version >= "3.7" and python_version < "4.0"
-sphinx==4.3.2 ; python_version >= "3.7" and python_version < "4.0"
-sphinxcontrib-applehelp==1.0.2 ; python_version >= "3.7" and python_version < "4.0"
-sphinxcontrib-devhelp==1.0.2 ; python_version >= "3.7" and python_version < "4.0"
-sphinxcontrib-htmlhelp==2.0.0 ; python_version >= "3.7" and python_version < "4.0"
-sphinxcontrib-jquery==4.1 ; python_version >= "3.7" and python_version < "4.0"
-sphinxcontrib-jsmath==1.0.1 ; python_version >= "3.7" and python_version < "4.0"
-sphinxcontrib-qthelp==1.0.3 ; python_version >= "3.7" and python_version < "4.0"
-sphinxcontrib-serializinghtml==1.1.5 ; python_version >= "3.7" and python_version < "4.0"
-tomli==2.0.1 ; python_version >= "3.7" and python_full_version <= "3.11.0a6"
-typed-ast==1.5.4 ; python_version < "3.8" and python_version >= "3.7"
-typeguard==2.13.3 ; python_version >= "3.7" and python_version < "4.0"
-typing-extensions==4.5.0 ; python_version >= "3.7" and python_version < "4.0"
-urllib3==1.26.15 ; python_version >= "3.7" and python_version < "4"
-websocket-client==1.5.1 ; python_version >= "3.7" and python_version < "4.0"
-werkzeug==2.2.3 ; python_version >= "3.7" and python_version < "4.0"
-zipp==3.15.0 ; python_version >= "3.7" and python_version < "3.10"
+alabaster==0.7.13 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+asn1crypto==1.5.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+attrs==23.2.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+babel==2.15.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+black==24.4.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+blinker==1.8.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+blockfrost-python==0.5.3 ; python_full_version >= "3.8.1" and python_version < "4"
+cachetools==5.3.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+cbor2==5.6.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+certifi==2024.2.2 ; python_full_version >= "3.8.1" and python_version < "4"
+certvalidator==0.11.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+cffi==1.16.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+charset-normalizer==3.3.2 ; python_full_version >= "3.8.1" and python_version < "4"
+click==8.1.7 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+colorama==0.4.6 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0" and (sys_platform == "win32" or platform_system == "Windows")
+cose==0.9.dev8 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+coverage[toml]==7.5.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+cryptography==42.0.7 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+decorator==5.1.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+docker==7.1.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+docutils==0.19 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+ecdsa==0.19.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+ecpy==1.2.5 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+exceptiongroup==1.2.1 ; python_full_version >= "3.8.1" and python_version < "3.11"
+execnet==2.1.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+flake8==7.0.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+flask==2.3.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+frozendict==2.4.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+frozenlist==1.4.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+idna==3.7 ; python_full_version >= "3.8.1" and python_version < "4"
+imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+importlib-metadata==7.1.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
+iniconfig==2.0.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+isort==5.13.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+itsdangerous==2.2.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+jinja2==3.1.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+markupsafe==2.1.5 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+mccabe==0.7.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+mnemonic==0.21 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+mypy-extensions==1.0.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+mypy==1.4.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+oscrypto==1.3.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+packaging==24.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pathspec==0.12.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+platformdirs==4.2.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pluggy==1.5.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pprintpp==0.4.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+py==1.11.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pycodestyle==2.11.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pycparser==2.22 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pyflakes==3.2.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pygments==2.18.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pynacl==1.5.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pytest-cov==5.0.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pytest-xdist==3.6.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pytest==8.2.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pytz==2024.1 ; python_full_version >= "3.8.1" and python_version < "3.9"
+pywin32==306 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0" and sys_platform == "win32"
+requests==2.32.3 ; python_full_version >= "3.8.1" and python_version < "4"
+retry==0.9.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+setuptools==69.5.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+six==1.16.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+snowballstemmer==2.2.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinx-copybutton==0.5.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinx-rtd-theme==2.0.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinx==5.3.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinxcontrib-applehelp==1.0.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinxcontrib-devhelp==1.0.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinxcontrib-htmlhelp==2.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinxcontrib-jquery==4.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinxcontrib-jsmath==1.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinxcontrib-qthelp==1.0.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sphinxcontrib-serializinghtml==1.1.5 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+tomli==2.0.1 ; python_full_version >= "3.8.1" and python_full_version <= "3.11.0a6"
+typeguard==4.3.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+types-requests==2.31.0.10 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+typing-extensions==4.12.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+urllib3==2.2.1 ; python_full_version >= "3.8.1" and python_version < "4"
+websocket-client==1.8.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+werkzeug==3.0.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+zipp==3.19.1 ; python_full_version >= "3.8.1" and python_version < "3.10"
