--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ frozendict = "^2.3.8"
 frozenlist = "^1.3.3"
 cachetools = "^5.3.0"
 docker = "^7.1.0"
+ogmios = {git = "https://gitlab.com/viperscience/ogmios-python.git"}
+requests = "^2.32.3"
+websockets = "^13.0"
 
 [tool.poetry.dev-dependencies]
 Sphinx = "^5.0.0"
@@ -64,7 +67,8 @@ addopts = "--doctest-modules --ignore=examples --ignore=integration-test --ignor
 minversion = "6.0"
 markers = [
     "post_alonzo",
-    "single"
+    "single",
+    "CardanoCLI",
 ]
 
 
