--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pycardano"
-version = "0.11.1"
+version = "0.12.3"
 classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
@@ -23,9 +23,9 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.8.1"
 PyNaCl = "^1.5.0"
-cbor2 = "^5.4.3"
+cbor2 = "^5.6.5"
 typeguard = "^4.3.0"
-blockfrost-python = "0.5.3"
+blockfrost-python = "0.6.0"
 websocket-client = "^1.4.1"
 cose = "0.9.dev8"
 pprintpp = "^0.4.0"
@@ -35,7 +35,7 @@ frozendict = "^2.3.8"
 frozenlist = "^1.3.3"
 cachetools = "^5.3.0"
 docker = "^7.1.0"
-ogmios = {git = "https://gitlab.com/viperscience/ogmios-python.git"}
+ogmios = "1.3.0"
 requests = "^2.32.3"
 websockets = "^13.0"
 
@@ -51,11 +51,10 @@ sphinx-copybutton = "^0.5.0"
 retry = "^0.9.2"
 Flask = "^2.0.3"
 pytest-xdist = "^3.5.0"
-mypy = "1.4.1"
-types-requests = "2.31.0.10"
+mypy = "1.11.2"
 
 [tool.poetry.group.dev.dependencies]
-setuptools = "^69.5.1"
+standard-imghdr = "^3.13.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -69,6 +68,7 @@ markers = [
     "post_alonzo",
     "single",
     "CardanoCLI",
+    "post_chang"
 ]
 
 
